--- a/resist/.gitignore
+++ b/resist/.gitignore
@@ -1,9 +1,4 @@
-vue/node_modules
-vue/dist
-release/
-.idea/
-.vscode/
-.DS_Store
-*.dot
-*.log
-*.ign
+# Compiled binaries
+resistd
+ignite
+*.tar.gz
